# bake

./: README.md  bake.cabal
app/: Bake.hs  Main.hs
src/: Deps.hs  Lib.hs  Parser.hs  Simpl.hs
testscripts/: test.bake  test1.bake
testscripts/test1/: Bakefile  app.c  lib.c  lib.h
testscripts/test2/: Bakefile
testscripts/test3/: Bakefile
