name:                bake
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/christiankjaer/bake#readme
license:             BSD3
license-file:        LICENSE
author:              Christian Kjær Larsen
maintainer:          christianden@gmail.com
copyright:           2017 Christian Kjær Larsen
category:            Build
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , megaparsec >= 5.2.0
  default-language:    Haskell2010

executable bake-exe
  hs-source-dirs:      app
  main-is:             Bake.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bake
                     , containers >= 0.5.7.1
                     , megaparsec >= 5.2.0
                     , pcre-heavy
                     , directory
                     , process
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/christiankjaer/bake
